tests/compile_fail/non_exhausitive.sml
val x = case 1 of
            0 => 0
         | 1 => 1
